修正检测逻辑